--- a/about0914.html
+++ b/about0914.html
@@ -7,9 +7,13 @@
 </head>
 <body>
 	<h1>朱楷翎</h1>
-	<h2>Linnng12190</h2>
-	個人網頁：file:///D:/test0914/about0914.html<br>
-
+	<h2>Linnng1219</h2>
+	<a href="file:///D:/test0914/about0914.html">個人網頁</a>:file:///D:/test0914/about0914.html<br>
 	E-Mail: a24499095a@gmail.com<br>
+	這是楊子青老師的資訊<br>
+	<a href="https://www1.pu.edu.tw/~tcyang">個人網頁</a>https://www1.pu.edu.tw/~tcyang<br>
+	<a href="https://www.facebook.com/tcyang1971">FB</a>:https://www.facebook.com/tcyang1971<br>
+	<a href="tel:0426328001,18110">Tel</a>:04-26328001#18110<br>
+	<a href="mailto:tcyang@pu.edu.tw">Email:</a>:tcyang@pu.edu.tw</a><br>
 </body>
 </html>
