--- a/about0914.html
+++ b/about0914.html
@@ -6,6 +6,7 @@
 	<title>朱楷翎09210</title>
 </head>
 <body>
+	<img src="cliff.jpg"></img>
 	<h1>朱楷翎</h1>
 	<h2>Linnng1219</h2>
 	<a href="file:///D:/test0914/about0914.html">個人網頁</a>:file:///D:/test0914/about0914.html<br>
@@ -15,5 +16,9 @@
 	<a href="https://www.facebook.com/tcyang1971">FB</a>:https://www.facebook.com/tcyang1971<br>
 	<a href="tel:0426328001,18110">Tel</a>:04-26328001#18110<br>
 	<a href="mailto:tcyang@pu.edu.tw">Email:</a>:tcyang@pu.edu.tw</a><br>
+	大象席地而坐電影配樂<br>
+	<audio controls><source src="elephant.mp3" type="audio/mP3"></audio><br>
+	不要去臺灣<br>
+	<iframe src="https://www.youtube.com/embed/pW88QFpHXa8" allowfullscreen></iframe>
 </body>
 </html>
